# steam-game-recommender

./: .env.example  .gitignore  DATA_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  demo_system.py  pyproject.toml  requirements.txt  run_server.py  run_steam_recommender.py  setup.py  start_system.py  test_api.py  test_quick.py  test_recommendations.py
.github/workflows/: ci.yml
data/: README.md  bundles.json
deployment/: render.yaml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/scripts/: download_sample_data.py  setup_local.sh  train_initial_models.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: SteamGameRecommender.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/services/: api.ts
notebooks/: 01_data_exploration.ipynb  01_data_exploration.py  02_preprocessing.ipynb  02_preprocessing.py  03_baseline_model.py  04_advanced_models.ipynb  04_advanced_models.py
scripts/: build_recommendation_models.py  create_sample_data.py  download_data.py  force_download_data.py  process_steam_data.py  train_model.py  web_demo.py
src/: __init__.py  main.py  recommendation_api.py  simple_server.py
src/api/: app.py  dependencies.py
src/api/middleware/: cors.py  error_handler.py  rate_limit.py
src/api/routes/: auth.py  games.py  recommendations.py  users.py
src/core/: config.py  constants.py  exceptions.py
src/data/: __init__.py  loader.py  preprocessor.py
src/domain/entities/: game.py  recommendation.py  user.py
src/domain/repositories/: base.py
src/domain/services/: auth_service.py  game_service.py  recommendation_service.py  user_service.py
src/evaluation/: __init__.py  metrics.py
src/infrastructure/cache/: __init__.py  redis_cache.py
src/infrastructure/database/: connection.py  models.py
src/infrastructure/ml/: model_manager.py  vector_store.py
src/infrastructure/vector_store/: __init__.py  (+1 more)
src/models/: __init__.py  base.py  cosine_similarity.py  hybrid.py  svd.py
src/utils/: __init__.py  visualization.py
tests/: __init__.py  test_basic_setup.py  test_data.py  test_database.py  test_models.py
